# remotecc-claude-session

./: .gitignore  AI_INSTALL.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLUGIN_INSTALL.md  README.md  README.zh-CN.md  SECURITY.md  SKILL.md  SUPPORT.md  pyproject.toml
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
agents/: openai.yaml
demo/hk-large-page/: index.html
demo/hk-simple-page/: index.html
demo/remotecc-step-crud/: hk-step.txt
demo/xipu-campus/: app.js  brief.md  index.html  styles.css
references/: command-cookbook.md
scripts/: remotecc.py
scripts/remotecc_lib/remotecc/: cli.py  store.py
src/remotecc/: __main__.py  cli.py  ssh.py
